--- a/MovieSuggestionApp/packages.config
+++ b/MovieSuggestionApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.0" targetFramework="net48" />
+  <package id="SQLitePCLRaw.core" version="3.0.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="10.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.6.3" targetFramework="net48" />
